# git-ai

./: AGENTS.md  BENCHMARKS.md  Cargo.toml  DAEMON_PLAN.md  INSTRUMENTATION_FINDINGS.md  INTEGRATION_COMPLETE.md  PERF_ANALYSIS_PLAN.md  PERF_WORK_STATUS.md  README.md  READY_TO_COMMIT.md  REWRITE.md  SUBPROCESS_INSTRUMENTATION.md  Taskfile.yml  flake.nix  install.ps1  install.sh
.cargo/: config.toml
.github/workflows/: codeql.yml  coverage.yml  e2e-tests.yml  github-integration-tests.yml  install-scripts-local.yml  intellij-build.yml  intellij-ui-tests.yml  nightly-agent-integration.yml  opencode-type-check.yml  performance-benchmarks.yml  release-vscode-extension.yml  release.yml  test-vscode-extension.yml  test.yml  update-changelog.yml
agent-support/opencode/: git-ai.ts
agent-support/vscode/: package.json
benches/: readonly_flood.rs
docs/: daemon_mode_test_compat_todos.md  rewrite-simplification-spec.md
docs/migrations/: sessions-remove-messages.md  sessions-v2-note-format.md
docs/perf/: windows-baseline-plan.md
installer/linux/: build-rpm.sh
installer/windows/: build-msi.ps1
scripts/: ai  ci-test-with-retry.ps1  ci-test-with-retry.sh  dev.sh  perf-baseline.sh  pre-commit
skills/git-ai-add-agent/: SKILL.md
skills/git-ai-architecture/: SKILL.md
src/: config.rs  daemon.rs  feature_flags.rs  http.rs  lib.rs  main.rs  os_sockets.rs  privilege.rs  utils.rs  uuid.rs
src/api/: mod.rs  (+3 more)
tests/: async_mode.rs  commit_hunks.rs  commit_tree_update_ref.rs  daemon_mode.rs  notes_sync_regression.rs  pull_rebase_ff.rs  rebase.rs  windows_install_script.rs
(+321 files in other folders)
