[package]
name = "git-ai"
version = "2.0.0-alpha.1"
edition = "2024"
default-run = "git-ai"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
imara-diff = "0.2"
libc = "0.2"

[features]
test-support = []

[dev-dependencies]
git-ai = { path = ".", features = ["test-support"] }
tempfile = "3.27"
sha2 = "0.10"
serde_json = "1.0"

[profile.dev]
debug = 1
split-debuginfo = "unpacked"

[profile.test]
debug = 1
split-debuginfo = "unpacked"

[profile.dev.build-override]
opt-level = 2

[[test]]
name = "integration"
path = "tests/integration/main.rs"
harness = true
